// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`almost eligible but for class A/B discipline requirements met 1`] = `
Array [
  Object {
    "text": "Currently on community",
    "tooltip": "Currently on minimum or community custody",
  },
  Object {
    "text": "Served at least 2/3 of sentence",
    "tooltip": "Served at least 2/3 of the term of imprisonment imposed or, in the case of a split sentence, at least 2/3 of the unsuspended portion, after consideration of any deductions that the prisoner has received and retained under Title 17A, section 2302, subsection 1; section 2305; section 2307; section 2308; section 2309; section 2310; or section 2311 if the term of imprisonment or, in the case of a split sentence, the unsuspended portion is more than 5 years.",
  },
  Object {
    "text": "24 months remaining on sentence",
    "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
  },
  Object {
    "text": "No detainers, warrants, or other pending holds",
    "tooltip": "Must have no detainers, warrants, or other pending holds preventing participation in a community program as set out in Department Policy (AF) 23.1",
  },
]
`;

exports[`almost eligible but for class A/B discipline requirements met 2`] = `
Array [
  Object {
    "text": "Needs 45 more days without a Class A or B discipline",
    "tooltip": "Must not have been found guilty of a Class A or B disciplinary violation within ninety (90) days of submitting the plan to be transferred to supervised community confinement or anytime thereafter prior to the scheduled transfer and must not have a Class A or B disciplinary report pending at the time of submitting the plan or scheduled transfer.",
  },
]
`;

exports[`almost eligible but for fraction of sentence served requirements met 1`] = `
Array [
  Object {
    "text": "Currently on community",
    "tooltip": "Currently on minimum or community custody",
  },
  Object {
    "text": "24 months remaining on sentence",
    "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
  },
  Object {
    "text": "No detainers, warrants, or other pending holds",
    "tooltip": "Must have no detainers, warrants, or other pending holds preventing participation in a community program as set out in Department Policy (AF) 23.1",
  },
]
`;

exports[`almost eligible but for fraction of sentence served requirements met 2`] = `
Array [
  Object {
    "text": "Needs to serve 3 more months on sentence.",
    "tooltip": "Served at least 2/3 of the term of imprisonment imposed or, in the case of a split sentence, at least 2/3 of the unsuspended portion, after consideration of any deductions that the prisoner has received and retained under Title 17A, section 2302, subsection 1; section 2305; section 2307; section 2308; section 2309; section 2310; or section 2311 if the term of imprisonment or, in the case of a split sentence, the unsuspended portion is more than 5 years.",
  },
]
`;

exports[`almost eligible but for months remaining requirements met 1`] = `
Array [
  Object {
    "text": "Currently on community",
    "tooltip": "Currently on minimum or community custody",
  },
  Object {
    "text": "Served at least 2/3 of sentence",
    "tooltip": "Served at least 2/3 of the term of imprisonment imposed or, in the case of a split sentence, at least 2/3 of the unsuspended portion, after consideration of any deductions that the prisoner has received and retained under Title 17A, section 2302, subsection 1; section 2305; section 2307; section 2308; section 2309; section 2310; or section 2311 if the term of imprisonment or, in the case of a split sentence, the unsuspended portion is more than 5 years.",
  },
  Object {
    "text": "No detainers, warrants, or other pending holds",
    "tooltip": "Must have no detainers, warrants, or other pending holds preventing participation in a community program as set out in Department Policy (AF) 23.1",
  },
  Object {
    "text": "No Class A or B disciplines pending or occurring in the past 90 days",
    "tooltip": "Must not have been found guilty of a Class A or B disciplinary violation within ninety (90) days of submitting the plan to be transferred to supervised community confinement or anytime thereafter prior to the scheduled transfer and must not have a Class A or B disciplinary report pending at the time of submitting the plan or scheduled transfer.",
  },
]
`;

exports[`almost eligible but for months remaining requirements met 2`] = `
Array [
  Object {
    "text": "35 months remaining on sentence",
    "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
  },
]
`;

exports[`fully eligible requirements met 1`] = `
Array [
  Object {
    "text": "Currently on community",
    "tooltip": "Currently on minimum or community custody",
  },
  Object {
    "text": "Served at least 2/3 of sentence",
    "tooltip": "Served at least 2/3 of the term of imprisonment imposed or, in the case of a split sentence, at least 2/3 of the unsuspended portion, after consideration of any deductions that the prisoner has received and retained under Title 17A, section 2302, subsection 1; section 2305; section 2307; section 2308; section 2309; section 2310; or section 2311 if the term of imprisonment or, in the case of a split sentence, the unsuspended portion is more than 5 years.",
  },
  Object {
    "text": "26 months remaining on sentence",
    "tooltip": "No more than thirty (30) months remaining on the term of imprisonment or, in the case of a split sentence, on the unsuspended portion, after consideration of any deductions that the resident has received and retained under Title 17-A, Sections 2302(1), 2305, and 23017-2311, if the commissioner, or designee, determines that the average statewide case load is no more than ninety (90) adult community corrections clients to one probation officer.",
  },
  Object {
    "text": "No detainers, warrants, or other pending holds",
    "tooltip": "Must have no detainers, warrants, or other pending holds preventing participation in a community program as set out in Department Policy (AF) 23.1",
  },
  Object {
    "text": "No Class A or B disciplines pending or occurring in the past 90 days",
    "tooltip": "Must not have been found guilty of a Class A or B disciplinary violation within ninety (90) days of submitting the plan to be transferred to supervised community confinement or anytime thereafter prior to the scheduled transfer and must not have a Class A or B disciplinary report pending at the time of submitting the plan or scheduled transfer.",
  },
]
`;

exports[`requirements for half sentence served 1`] = `
Object {
  "text": "Served at least 1/2 of sentence",
  "tooltip": "Served at least 1/2 of the term of imprisonment imposed or, in the case of a split sentence, at least 1/2 of the unsuspended portion, after consideration of any deductions that the prisoner has received and retained under Title 17A, section 2302, subsection 1; section 2305; section 2307; section 2308; section 2309; section 2310; or section 2311 if the term of imprisonment or, in the case of a split sentence, the unsuspended portion is 5 years or less.",
}
`;
